# markov-switch

./: README.md  pyproject.toml
paper/: f109.csv  f109_approx.ipynb  f109_impute.ipynb  f109_mcem.ipynb  f109_mcmc.ipynb  f109_plots.ipynb  simstud_base.ipynb  simstud_extend.ipynb  simstud_infill.ipynb  simstud_plots.ipynb
switch/: euler_mcem.py  euler_mcmc.py  factory.py  mcem.py  mcmc.py  sde.py  types.py
switch/ea1lib/: ncp.py  skeleton.py
switch/ea3lib/: skeleton.py
switch/misc/: adapt.py  ars.py  bfactories.py  exceptions.py  testing.py
switch/mjplib/: inference.py  skeleton.py
switch/models/: loggrowth.py  tanh.py
switch/sdelib/: bessel.py  interpolators.py  paths.py  transforms.py
