[project]
name = "markov-switch-remote"
version = "0.1.0"
description = "Replication code for https://arxiv.org/abs/2502.09126"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
]
